refactor(auth): 重构 auth-service 1. 修改 api 返回类型，不包含 optional 2. 清理 pom.xml 去掉冗余的编译配置